--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="deskripsi">Nama saya Resma Panjaitan, mahasiswi Semester 8 di Universitas Indraprasta PGRI. Aplikasi ini dibuat untuk memenuhi tugas akhir. </string>
+    <string name="deskripsi">Nama saya Resma Panjaitan, mahasiswi semester 8 di Universitas Indraprasta PGRI. Aplikasi ini dibuat sebagai salah satu syarat untuk memenuhi Tugas Akhir dan memperoleh gelar Sarjana.
+ </string>
 </resources>
