--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">LAGU NASIONAL INDONESIA</string>
     <string name="title_activity_home">HomeActivity</string>
     <string name="title_Beranda">Beranda</string>
-    <string name="title_Pencarian">Pencarian</string>
+    <string name="title_Pencarian">Quis</string>
     <string name="title_DaftarPutar">Daftar Putar</string>
     <string name="title_Tentang">Tentang</string>
 
